{{$NEXT}}

0.24      2013-11-16 09:23:45 MST7MDT
         - Add Elasticsearch backend

0.23      2013-07-22 09:28:33 MST7MDT
         - update to jquery 2.0.3 and jquery ui 1.10.3
         - Use ArrayRef[HashRef] instead of AHRef

0.22      2013-05-28 11:05:16 MST7MDT
         [Remedies]
         - supress smartmatch warning in perl 5.18+
         - use db/collection getters (MongoDB)

0.21      2012-12-04 14:15:45 MST7MDT

         [Refinements]
         - better UTF-8 handling
         - encode HTML entities displayed in textarea
         - gist URL shortcut
         - use SHJS for synopsis
         - enable public page param on create/update

         [Remedies]
         - escape left brace in regex for perl 5.17

0.20      2012-06-08 16:38:15 America/Denver
          [Enchantments]
          - Atom feed support
          - Option to mark a page as part of a feed
          - Option to mark a page as publicly viewable (no auth needed)

          [Refinements]
          - Option to mark a page as part of a collection

0.19      2012-05-11 11:01:08 America/Denver
          [Refinement]
          - Edit area scrolls with you on long pages

          [Remedies]
          - Cross platform compatible config path
          - Make sure Mojito::Model::MetaCPAN returns truth

0.18      2012-04-16 11:48:01 America/Denver
          [Enchantments]
          - Toggle view during edit
          
          [Remedies]
          - Use MooX::Types::MooseLike::Base
            (keeps tests happy w/ MooX::Types::MooseLike 0.03+)

0.17      2011-12-06 07:23:54 America/Denver
          [Remedies]
          - Mark data_schema.t as an author test
           
          [Refinements]
          - Improve docs

0.16      2011-12-04 20:58:30 America/Denver
          [Enchantments]
          - monthly calendar view of notes.  For example,
              /calendar/year/2011/month/12
          - Enable internal links of the [[URI|title]] format