@@ -1,6 +1,6 @@
 { 
     static_url          => 'http://localhost/mojito/',
     git_repo            => '/home/hunter/repos/mojito',
-    document_storage    => 'Mongo',                     # Must be Deep or Mongo
+    document_storage    => 'Elasticsearch', # Must be Elasticsearch, Mongo or Deep
     ebook_converter     => '/usr/bin/ebook-convert',
 };
