@@ -1,4 +1,5 @@
 {{$NEXT}}
+         - Change to use Search::Elasticsearch
 
 0.24      2013-11-16 09:23:45 MST7MDT
          - Add Elasticsearch backend
